add jpa support add databse support add junit test modules 	修改:       pom.xml 	重命名:     src/main/java/com/byd/ServTraincontrolApplication.java -> src/main/java/com/byd/ats/ServTraincontrolApplication.java 	重命名:     src/main/java/com/byd/entity/Ats2ciMsgComm.java -> src/main/java/com/byd/ats/entity/Ats2ciMsgComm.java 	重命名:     src/main/java/com/byd/entity/Ats2ciMsgRunst.java -> src/main/java/com/byd/ats/entity/Ats2ciMsgRunst.java 	重命名:     src/main/java/com/byd/entity/Ats2vobcAtoCommand.java -> src/main/java/com/byd/ats/entity/Ats2vobcAtoCommand.java 	重命名:     src/main/java/com/byd/entity/Ats2vobcMsgComm.java -> src/main/java/com/byd/ats/entity/Ats2vobcMsgComm.java 	重命名:     src/main/java/com/byd/entity/Ats2zcElectrifyTsr.java -> src/main/java/com/byd/ats/entity/Ats2zcElectrifyTsr.java 	重命名:     src/main/java/com/byd/entity/Ats2zcExecuteTsr.java -> src/main/java/com/byd/ats/entity/Ats2zcExecuteTsr.java 	重命名:     src/main/java/com/byd/entity/Ats2zcLogic.java -> src/main/java/com/byd/ats/entity/Ats2zcLogic.java 	重命名:     src/main/java/com/byd/entity/Ats2zcMsgElectrifyTsr.java -> src/main/java/com/byd/ats/entity/Ats2zcMsgElectrifyTsr.java 	重命名:     src/main/java/com/byd/entity/Ats2zcMsgExecuteTsr.java -> src/main/java/com/byd/ats/entity/Ats2zcMsgExecuteTsr.java 	重命名:     src/main/java/com/byd/entity/Ats2zcMsgVerifyTsr.java -> src/main/java/com/byd/ats/entity/Ats2zcMsgVerifyTsr.java 	重命名:     src/main/java/com/byd/entity/Ats2zcVerifyTsr.java -> src/main/java/com/byd/ats/entity/Ats2zcVerifyTsr.java 	重命名:     src/main/java/com/byd/entity/AtsMsgCommand.java -> src/main/java/com/byd/ats/entity/AtsMsgCommand.java 	重命名:     src/main/java/com/byd/entity/AtsMsgRunStatus.java -> src/main/java/com/byd/ats/entity/AtsMsgRunStatus.java 	重命名:     src/main/java/com/byd/entity/AtsPub.java -> src/main/java/com/byd/ats/entity/AtsPub.java 	重命名:     src/main/java/com/byd/entity/CimsgError.java -> src/main/java/com/byd/ats/entity/CimsgError.java 	重命名:     src/main/java/com/byd/entity/CimsgSt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,20 @@ spring:
     host: 10.5.133.180
     username: guest
     password: guest
-
+    
+  datasource:
+    url: jdbc:mysql://10.5.133.179:3306/test
+    username: root
+    password: dev@ats
+    driver-class-name: com.mysql.jdbc.Driver
+    
+  jpa:
+    database:
+      MYSQL
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+      
 logging:
   level:
     org: ERROR
@@ -14,3 +27,5 @@ logging:
 tutorial:
   client:
     duration: 10000
+    
+ 
