1.支持mysql数据存储 2.支持定时周期发送设置扣车，设置跳停 3.支持多线程定时任务 4.支持全线取消寇策 5.支持提前发车
	修改:       pom.xml
	修改:       src/main/java/com/byd/ats/ServTraincontrolApplication.java
	修改:       src/main/java/com/byd/ats/controller/PersonController.java
	new file:   src/main/java/com/byd/ats/entity/CLient2serJsonCommand.java
	修改:       src/main/java/com/byd/ats/entity/Client2serZcCommand.java
	修改:       src/main/java/com/byd/ats/entity/HeaderInfo.java
	修改:       src/main/java/com/byd/ats/entity/Person.java
	修改:       src/main/java/com/byd/ats/rabbitmq/Tut5Receiver.java
	new file:   src/main/java/com/byd/ats/service/Client2serJsonCommandRepository.java
	修改:       src/main/java/com/byd/ats/service/PersonRepository.java
	new file:   src/main/java/com/byd/ats/util/MyTimerTask.java
	修改:       src/main/resources/application.yml
	修改:       src/test/java/com/byd/ats/ServTraincontrolApplicationTests.java

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv05-traincontrol</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1.4</version>
 	<packaging>jar</packaging>
 
 	<name>serv05-traincontrol</name>
@@ -33,7 +33,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
-		<dependency>
+		<!--  <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -45,7 +45,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
