1. 添加docker打包支持 2.优化多线程问题. 	修改：     pom.xml 	新文件：   src/main/docker/Dockerfile 	修改：     src/main/java/com/byd/ats/rabbitmq/Tut5Config.java 	修改：     src/main/java/com/byd/ats/rabbitmq/Tut5Receiver.java 	修改：     src/main/java/com/byd/ats/util/MyTimerTask.java

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv05-traincontrol</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.6</version>
 	<packaging>jar</packaging>
 
 	<name>serv05-traincontrol</name>
@@ -106,6 +106,24 @@
 					</jvmArguments>
 				</configuration> -->
 			</plugin>
+			<!-- tag::plugin[] -->
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.13</version>
+                <configuration>
+                    <imageName>zhangyuan7/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
+            </plugin>
+    <!-- end::plugin[] -->
 		</plugins>
 	</build>
 
