--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv05-traincontrol</artifactId>
-	<version>0.0.6</version>
+	<version>v0.2.0</version>
 	<packaging>jar</packaging>
 
 	<name>serv05-traincontrol</name>
