1.添加密码确认 2.增加模式切换 3.增加命令下发指令返回支持 	modified:   pom.xml 	new file:   src/main/java/com/byd/ats/entity/AmqpCiFeed.java 	modified:   src/main/java/com/byd/ats/entity/CLient2serJsonCommand.java 	modified:   src/main/java/com/byd/ats/entity/Client2serCommand.java 	new file:   src/main/java/com/byd/ats/entity/Cu2AtsCiFeed.java# 	new file:   src/main/java/com/byd/ats/entity/Ret2ClientResult.java 	modified:   src/main/java/com/byd/ats/rabbitmq/Tut5Config.java 	modified:   src/main/java/com/byd/ats/rabbitmq/Tut5Receiver.java 	modified:   src/main/java/com/byd/ats/service/Client2serJsonCommandRepository.java 	new file:   src/main/java/com/byd/ats/util/RedisService.java 	modified:   src/main/resources/application-dev.properties 	modified:   src/main/resources/application-prod.properties 	modified:   src/main/resources/application.properties 	modified:   src/test/java/com/byd/ats/ServTraincontrolApplicationTests.java

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,8 @@
 spring.rabbitmq.host=10.5.133.220
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.port=5673
+spring.rabbitmq.username=atsusr
+spring.rabbitmq.password=atspwd
+spring.rabbitmq.virtual-host=atshst
 
 spring.datasource.url=jdbc:mysql://10.5.133.219:3306/test?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
