--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,15 @@
-spring.rabbitmq.host=10.5.133.219
+spring.rabbitmq.host=10.5.133.220
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+#spring.rabbitmq.host=10.5.133.219
+#spring.rabbitmq.port=5673
+#spring.rabbitmq.username=atsusr
+#spring.rabbitmq.password=atspwd
+#spring.rabbitmq.virtual-host=atshst
 
-spring.datasource.url=jdbc:mysql://10.5.133.220:3306/test?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://10.5.133.219:3306/test?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=dev@ats
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -10,6 +17,21 @@ spring.datasource.max-active=20
 spring.datasource.max-idle=8
 spring.datasource.min-idle=8
 spring.datasource.initial-size=10
+
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.redis.database=0
+#spring.redis.host=10.5.133.53
+#spring.redis.port=6379
+#spring.redis.password=
+#spring.redis.pool.max-active=8
+#spring.redis.pool.max-wait=-1
+#spring.redis.pool.max-idle=8
+#spring.redis.pool.min-idle=0
+#spring.redis.timeout=0
+#endpoints.health.sensitive=false
 
 logging.file=log.log
 logging.level.com.byd.ats=INFO
