--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
                     <dockerDirectory>src/main/docker</dockerDirectory>
                     <imageTags>
                     	<imageTag>${project.version}</imageTag>
+                    	<imageTag>latest</imageTag>
                     </imageTags>
                     <resources>
                         <resource>
