--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
-#spring.rabbitmq.host=10.5.133.219
+#spring.rabbitmq.host=10.5.133.221
 #spring.rabbitmq.port=5673
 #spring.rabbitmq.username=atsusr
 #spring.rabbitmq.password=atspwd
@@ -22,17 +22,19 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.redis.database=0
-#spring.redis.host=10.5.133.53
-#spring.redis.port=6379
-#spring.redis.password=
-#spring.redis.pool.max-active=8
-#spring.redis.pool.max-wait=-1
-#spring.redis.pool.max-idle=8
-#spring.redis.pool.min-idle=0
-#spring.redis.timeout=0
-#endpoints.health.sensitive=false
-
-logging.file=log.log
-logging.level.com.byd.ats=INFO
+spring.redis.database=0
+spring.redis.host=10.5.133.53
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.timeout=0
+endpoints.health.sensitive=false
+#logging.file=d:/demo/log2.log
+#logging.file=log.log
+#logging.level.com.byd.ats=INFO
+#logging.level.com.byd.util=warn
+#logging.level.root=WARN
 #logging.level.com.byd.ats.helper=warn
