--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.byd.ats</groupId>
-	<artifactId>serv05-traincontrol</artifactId>
-	<version>v0.2.0</version>
+	<artifactId>serv35-traincontrol</artifactId>
+	<version>0.1.1</version>
 	<packaging>jar</packaging>
 
-	<name>serv05-traincontrol</name>
+	<name>serv35-traincontrol</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -89,14 +89,25 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency> -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+			<version>1.3.2.RELEASE</version>
+		</dependency>
+		
+        <dependency>
+    		<groupId>net.sf.ehcache</groupId>
+    		<artifactId>ehcache</artifactId>
+    		<version>2.10.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
