--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,15 +3,17 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
-#spring.rabbitmq.host=10.5.133.221
-#spring.rabbitmq.port=5673
+#spring.rabbitmq.host=10.5.133.219
+#spring.rabbitmq.port=5672
 #spring.rabbitmq.username=atsusr
 #spring.rabbitmq.password=atspwd
 #spring.rabbitmq.virtual-host=atshst
 
-spring.datasource.url=jdbc:mysql://10.5.133.219:3306/test?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=dev@ats
+spring.datasource.url=jdbc:mysql://10.5.133.213:3306/test?useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=dev@ats
+spring.datasource.username=atsusr
+spring.datasource.password=atspwd
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-active=20
 spring.datasource.max-idle=8
@@ -19,19 +21,19 @@ spring.datasource.min-idle=8
 spring.datasource.initial-size=10
 
 spring.jpa.database=MYSQL
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-spring.redis.database=0
-spring.redis.host=10.5.133.53
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.pool.max-active=8
-spring.redis.pool.max-wait=-1
-spring.redis.pool.max-idle=8
-spring.redis.pool.min-idle=0
-spring.redis.timeout=0
-endpoints.health.sensitive=false
+#spring.redis.database=0
+#spring.redis.host=10.5.133.213
+#spring.redis.port=7379
+#spring.redis.password=
+#spring.redis.pool.max-active=8
+#spring.redis.pool.max-wait=-1
+#spring.redis.pool.max-idle=8
+#spring.redis.pool.min-idle=0
+#spring.redis.timeout=0
+#endpoints.health.sensitive=false
 #logging.file=d:/demo/log2.log
 #logging.file=log.log
 #logging.level.com.byd.ats=INFO
