--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,10 +1,12 @@
-spring.rabbitmq.host=10.5.133.220
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.host=10.5.131.12
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=atsusr
+spring.rabbitmq.password=atspwd
+spring.rabbitmq.virtual-host=atshst
 
-spring.datasource.url=jdbc:mysql://10.5.133.219:3306/test?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=dev@ats
+spring.datasource.url=jdbc:mysql://10.5.131.12:3306/db_traincontrol_YC01?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=atsusr
+spring.datasource.password=atspwd
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-active=20
 spring.datasource.max-idle=8
@@ -14,7 +16,7 @@ spring.datasource.initial-size=10
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-
-logging.file=log.log
-logging.level.com.byd.ats=INFO
+#mvn clean package -DskipTests=true
+#logging.file=log.log
+#logging.level.com.byd.ats=INFO
 #logging.level.com.byd.ats.helper=warn
