--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv35-traincontrol</artifactId>
-	<version>0.1.3</version>
+	<version>0.3.0</version>
 	<packaging>jar</packaging>
 
 	<name>serv35-traincontrol</name>
-	<description>Demo project for Spring Boot</description>
+	<description>[ATS] the service for all control operations</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -93,16 +93,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency> -->
+
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 			<version>1.3.2.RELEASE</version>
 		</dependency>
-		
+
         <dependency>
     		<groupId>net.sf.ehcache</groupId>
     		<artifactId>ehcache</artifactId>
@@ -114,6 +119,19 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Camden.SR7</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 
 	<build>
 		<resources>
