--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv35-traincontrol</artifactId>
-	<version>0.3.0</version>
+	<version>1.0.0-RC2</version>
 	<packaging>jar</packaging>
 
 	<name>serv35-traincontrol</name>
@@ -98,7 +98,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		<dependency>
+ 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
@@ -120,7 +120,7 @@
 		</dependency>
 	</dependencies>
 
-	<dependencyManagement>
+ 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -187,7 +187,7 @@
 	</build>
 
 	<repositories>
-		<repository>
+<!-- 		<repository>
 			<id>spring-snapshots</id>
 			<name>Spring Snapshots</name>
 			<url>https://repo.spring.io/snapshot</url>
@@ -202,27 +202,68 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
+		</repository> -->
+		<repository>
+			<id>maven-local</id>
+			<name>Maven local repository</name>
+			<url>http://10.5.133.220:8081/repository/maven-central/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>maven-local-releases</id>
+			<name>Maven Local Release Repository</name>
+			<url>http://10.5.133.220:8081/repository/maven-releases/</url>
 		</repository>
 	</repositories>
-
 	<pluginRepositories>
 		<pluginRepository>
-			<id>spring-snapshots</id>
-			<name>Spring Snapshots</name>
-			<url>https://repo.spring.io/snapshot</url>
-			<snapshots>
+			<id>maven-local</id>
+			<name>Maven local repository</name>
+			<url>http://10.5.133.220:8081/repository/maven-central/</url>
+			<releases>
 				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-		<pluginRepository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
+			</releases>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	<!-- upload the component to maven local repository when run mvn depoly -->
+	<distributionManagement>
+		<repository>
+			<id>maven-local-releases</id>
+			<name>Maven Local Release Repository</name>
+			<url>http://10.5.133.220:8081/repository/maven-releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>maven-local-snapshots</id>
+			<name>Maven Local Snapshot Repository</name>
+			<url>http://10.5.133.220:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+<!-- 	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories> -->
 
 
 </project>
