--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,19 +1,19 @@
-spring.rabbitmq.host=10.5.133.220
+spring.rabbitmq.host=10.5.133.221
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.rabbitmq.virtual-host=/
+spring.rabbitmq.username=atsusr
+spring.rabbitmq.password=atspwd
+spring.rabbitmq.virtual-host=atshst
 #spring.rabbitmq.host=10.5.133.219
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=atsusr
 #spring.rabbitmq.password=atspwd
 #spring.rabbitmq.virtual-host=atshst
 
-spring.datasource.url=jdbc:mysql://10.5.133.213:3306/test?useUnicode=true&characterEncoding=utf8
-#spring.datasource.username=root
-#spring.datasource.password=dev@ats
-spring.datasource.username=atsusr
-spring.datasource.password=atspwd
+spring.datasource.url=jdbc:mysql://10.5.133.219:3306/db_traincontrol_YC01?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=dev@ats
+#spring.datasource.username=atsusr
+#spring.datasource.password=atspwd
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-active=20
 spring.datasource.max-idle=8
@@ -21,7 +21,7 @@ spring.datasource.min-idle=8
 spring.datasource.initial-size=10
 
 spring.jpa.database=MYSQL
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.redis.database=0
