--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv35-traincontrol</artifactId>
-	<version>1.0.0-RC2</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>serv35-traincontrol</name>
