YC01: 对于办理进路后又扳动进路中的道岔导致CI不断反馈办理进路等待的信息的处理
如果接收到CI的命令反馈即设置status为4，那么当CI反馈等待信息时就会导致后续的同一命令反馈被丢弃；
所以只对命令反馈的有效性做判别，有效的命令反馈都转发给客户端处理。

	modified:   pom.xml
	modified:   src/main/java/com/byd/ats/entity/CLient2serJsonCommand.java
	modified:   src/main/java/com/byd/ats/rabbitmq/Tut5Receiver.java
	modified:   src/main/java/com/byd/ats/service/Client2serJsonCommandRepository.java

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv35-traincontrol</artifactId>
-	<version>0.5.3cifeed</version>
+	<version>0.5.3cifeed3</version>
 	<packaging>jar</packaging>
 
 	<name>serv35-traincontrol</name>
