1、将扣车表与跳停表合并到一个表，并拆分JSON字段 2、将CLient2serJsonCommand表的json字段拆分出来，添加接收、发送时间等字段 3、添加workstation字段 4、修改版本号：0.5.4.1 	modified:   pom.xml 	modified:   src/main/java/com/byd/ats/controller/PlatformDetainStateController.java 	modified:   src/main/java/com/byd/ats/controller/SkipStationStateController.java 	modified:   src/main/java/com/byd/ats/entity/CLient2serJsonCommand.java 	new file:   src/main/java/com/byd/ats/entity/CLient2serJsonCommandHistory.java 	modified:   src/main/java/com/byd/ats/entity/Client2serCommand.java 	modified:   src/main/java/com/byd/ats/entity/Cu2AtsCiFeed.java 	modified:   src/main/java/com/byd/ats/entity/PlatformState.java 	modified:   src/main/java/com/byd/ats/entity/Ret2ClientResult.java 	modified:   src/main/java/com/byd/ats/entity/SkipStationState.java 	new file:   src/main/java/com/byd/ats/entity/SkipStationState2Cli.java 	modified:   src/main/java/com/byd/ats/rabbitmq/Tut5Receiver.java 	new file:   src/main/java/com/byd/ats/service/Client2serJsonCommandHistoryRepository.java 	modified:   src/main/java/com/byd/ats/service/SkipStationStateRepository.java 	modified:   src/main/java/com/byd/ats/service/SkipStationStateService.java 	modified:   src/main/java/com/byd/ats/service/SkipStationStateServiceImpl.java

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv35-traincontrol</artifactId>
-	<version>0.5.4</version>
+	<version>0.5.4.1</version>
 	<packaging>jar</packaging>
 
 	<name>serv35-traincontrol</name>
@@ -26,9 +26,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.byd5.ats</groupId>
+			<groupId>com.byd.ats</groupId>
 			<artifactId>lib01-protocol-ats2ext</artifactId>
-			<version>0.0.1</version>
+			<version>0.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -117,6 +117,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
 		</dependency>
 	</dependencies>
 
