1、新增在ATS终端上的所有操作的查询接口 2、新增定时删除CLient2serJsonCommand表中的数据(命令超过3min) 3、当命令号为22、23时，转发给进路办理
	modified:   pom.xml
	new file:   src/main/java/com/byd/ats/controller/Client2serJsonCommandController.java
	modified:   src/main/java/com/byd/ats/entity/CLient2serJsonCommand.java
	new file:   src/main/java/com/byd/ats/entity/CLient2serJsonCommand2report.java
	modified:   src/main/java/com/byd/ats/entity/CLient2serJsonCommandHistory.java
	modified:   src/main/java/com/byd/ats/rabbitmq/Tut5Receiver.java
	modified:   src/main/java/com/byd/ats/service/Client2serJsonCommandHistoryRepository.java
	modified:   src/main/java/com/byd/ats/service/Client2serJsonCommandRepository.java
	new file:   src/main/java/com/byd/ats/util/CmdEnum.java
	new file:   src/main/java/com/byd/ats/util/ScheduledTasks.java
	new file:   src/main/java/com/byd/ats/util/test.java
	modified:   src/main/resources/application-dev.properties
	modified:   src/main/resources/application.yml
	modified:   src/test/java/com/byd/ats/ServTraincontrolApplicationTests.java

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,14 @@ spring:
   application:
     name: serv35-traincontrol
 
+  zipkin:
+    baseUrl: http://10.5.133.219:9411
+    
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://10.5.133.213:8761/eureka/
+      defaultZone: http://10.5.133.219:8761/eureka/
+
 
 info:
   app:
