--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.rabbitmq.host=10.5.133.213
+spring.rabbitmq.host=10.5.133.219
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=atsusr
 spring.rabbitmq.password=atspwd
@@ -9,9 +9,9 @@ spring.rabbitmq.virtual-host=atshst
 #spring.rabbitmq.password=atspwd
 #spring.rabbitmq.virtual-host=atshst
 
-spring.datasource.url=jdbc:mysql://10.5.133.219:3306/db_traincontrol_YC01?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://10.5.133.213:3306/db_traincontrol_YC01?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=dev@ats
+spring.datasource.password=root@mysql
 #spring.datasource.username=atsusr
 #spring.datasource.password=atspwd
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
