[发布版本] 0.6.0rc1 1、修改控制模式转换的处理 2、修改扣车状态信息及跳停状态的处理 3、对相关协议字段进行更新 Changes to be committed:

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,5 @@ info:
     spring-boot-artifact: "@project.parent.artifact@"
     spring-boot-version: "@project.parent.version@"
 
+server:
+ port: 60035
