--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.byd.ats</groupId>
 	<artifactId>serv35-traincontrol</artifactId>
-	<version>0.5.6a</version>
+	<version>0.6.0rc1</version>
 	<packaging>jar</packaging>
 
 	<name>serv35-traincontrol</name>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>com.byd.ats</groupId>
 			<artifactId>lib01-protocol-ats2ext</artifactId>
-			<version>0.1.1</version>
+			<version>0.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
